infer/tests/codetoanalyze/c/errors/assertions/assert_example.c
../../frontend/assertions/assert_example.c